--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,17 +1,22 @@
 #nav2 {
+    
     position: relative;
-    height: 23vh;
+    /* height: 23vh; */
+    height: 153.5px;
     width: 100%;
     /* padding: 2%; */
     
     
     display: flex;
+    
     justify-content: space-between;
     align-items: center;
     background-color: rgb(150, 196, 131);
     
+    
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     z-index: 2;
+    
 }
 
 .logo-container {
@@ -21,7 +26,8 @@
 
 
     position: relative;
-    margin-left: 2%;
+    /* margin-left: 2%; */
+    margin-left: 0%;
     height: 100%;
     width: 65%;
     padding-bottom: 3%;
@@ -34,6 +40,8 @@
 #main-logo {
     height: 50%;
     width: 100%;
+    height: 71.125px;
+    width: 83px;
     background-color: rgb(0, 0, 0);
     border: .1em solid black;
 }
@@ -103,7 +111,7 @@
         height: 23vh;
         padding: 2%;
         
-        /* padding-top: 15%; */
+        
     }
 
 
@@ -202,9 +210,9 @@
     
     
 #nav2 {
-    height: 25vh;
     
     height: 15vh;
+    
     width: 100%;
     padding: 1%;
     
@@ -220,6 +228,7 @@
     
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     z-index: 2;
+
 }
 
 .logo-container {
