--- a/client/src/css/Projects.css
+++ b/client/src/css/Projects.css
@@ -30,7 +30,8 @@
     
     
     margin-top: 2%;
-    height: 90vh;
+    /* height: 90vh; */
+    height: 367px;
     width: 100%;
     /* background-color: rgb(206, 105, 105); */
 }
@@ -73,6 +74,7 @@
     justify-content: center;
     align-items: center;
     height: 20vh;
+    height: 133.4px;
     width: 100%;
     /* background-color: rgb(51, 197, 197); */
     margin-bottom: 10%;
@@ -82,7 +84,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80%;
+    /* height: 80%; */
+    height: 60%;
     width: 80%;
     /* background-color: rgba(128, 128, 128, 0.301); */
 
@@ -162,9 +165,11 @@
         
         margin-top: 5%;
         margin-bottom: 5%;
-        height: 55vh;
+        /* height: 55vh; */
+        height: 367px;
         width: 100%;
         /* background-color: rgb(206, 105, 105); */
+
     }
     
     #center-project {
@@ -198,6 +203,156 @@
 
 @media (min-width: 1200px) {
     
+    #projects-title {
+        text-align: center;
+        margin-top: 3%;
+        font-size: 2rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 2px;
+    
+    }
+    
+    #projectsLine {
+        margin-top: 1%;
+        height: 1px;
+        width: 70%;
+        color: black;
+        background-color: rgb(202, 202, 202);
+    }
+    
+    #projects-container {
+        display: flex;
+        
+        /*Used for version 1*/
+        /* justify-content: space-evenly;
+        flex-wrap: wrap; */
+        /**/
+    
+    
+        /*Used for version 2 of site*/
+        justify-content: center;
+        align-items: center;
+        
+        
+        margin-top: 2%;
+        height: 90vh;
+        width: 100%;
+        /* background-color: rgb(206, 105, 105); */
+    }
+    
+    #center-project {
+        position: relative;
+        height: 90%;
+        width: 100%;
+        /* height: 100%;
+        width: 90%; */
+        /* box-shadow: 0 0 10px 3px black; */
+        /* background-color: white; */
+    }
+    
+    #center-image-filter {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+    }
+    
+    /* #center-image-filter:hover {
+        background-color: rgba(0, 0, 0, 0.253);
+    } */
+    
+    #center-project img {
+        
+        height: 100%;
+        width: 100%;
+        /* object-fit: cover; */
+        object-fit: contain;
+        z-index: 0;
+        
+    }
+    
+    
+    #projects-scroller-container {
+        margin-top: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 20vh;
+        width: 100%;
+        /* background-color: rgb(51, 197, 197); */
+        margin-bottom: 10%;
+    }
+    
+    #projects-scroller {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* height: 60%;
+        width: 80%; */
+
+
+        height: 90%;
+        width: 60%;
+    
+    }
+    
+    #projects-scroller-inner {
+        position: relative;
+        display: flex;
+        gap: 1%;
+        height: 90%;
+        width: 90%;
+        
+        /* background-color: rgba(0, 0, 0, 0.822); */
+    }
+    
+    .projectCards {
+        height: 100%;
+        width: 40%;
+        
+    }
+    
+    .projectCards img {
+        height: 100%;
+        width: 100%;
+        /* filter: brightness(.5) invert(.25); */
+        cursor: pointer;
+    }
+    
+    #right-scroller {
+        position: absolute;
+        right: -3%;
+        right: -11%;
+        height: 100%;
+        width: 2%;
+        width: 10%;
+        
+        background-color: rgb(103, 139, 92);
+    }
+    
+    #right-scroller img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+        cursor: pointer;
+    }
+    
+    #left-scroller {
+        position: absolute;
+        left: -11%;
+        height: 100%;
+        width: 10%;
+        
+        background-color: rgb(103, 139, 92);
+    }
+    
+    #left-scroller img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+        cursor: pointer;
+    }
+
 }
 
 
@@ -212,57 +367,3 @@
 
 
 
-
-
-.project-cards {
-    margin-top: 1%;
-    /* height: 100%; */
-    height: 350px;
-   width: 30%;
-   box-shadow: 0 0 8px 3px black;
-}
-
-.double-project-cards {
-    position: relative;
-    margin-top: 1%;
-    height: 350px;
-    width: 30%;
-    box-shadow: 0 0 8px 3px black;
-}
-
-.double-project-cards img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-.project-cards img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-#card-selector {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2%;
-    position: absolute;
-    bottom: 0;
-    height: 10%;
-    width: 100%;
-    background-color: rgba(128, 128, 128, 0.664);
-}
-
-.selector-dot-1 {
-    height: 20%;
-    width: 1.5%;
-    border-radius: 50%;
-    background-color: rgb(0, 0, 0);
-}
-
-.selector-dot-2 {
-    height: 20%;
-    width: 1.5%;
-    border-radius: 50%;
-    background-color: white;
-}
