--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -412,24 +412,25 @@
     animation-duration: 10s;
     /* animation-iteration-count: calc(10); */
     animation-name: growTree;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: -740%;
+    left: .5%;
+    height: 800%;
+    width: 100%;
+    background-color: rgba(255, 0, 0, 0);
+    background-image: url("../images/growing_tree_4.5.png");
+    background-image: url("../images/growing_tree_1.5.png");
+    background-size: contain;
+    animation-duration: 10s;
+    animation-name: growTree;
 }
 
 @keyframes growTree {
-    /* from {
-        background-image: url("../images/growing_tree_1.5.png");
-        background-size: cover;
-    }
-
-    50% {
-        background-image: url("../images/growing_tree_2.5.png");
-        background-size: cover;
-    }
-
-    to {
-        background-image: url("../images/growing_tree_4.5.png");
-        background-size: cover;
-    } */
-
     10% {
         background-image: url("../images/growing_tree_1.5.png");
 
@@ -1077,6 +1078,250 @@
     }
 
     
+}
+
+@media (min-width: 601px) {
+
+    #service-intro {
+        
+        background-color: rgb(211, 211, 16);
+        
+    
+    }
+}
+
+@media (min-width: 768px) {
+
+    #service-intro {
+        height: 75vh;
+        height: 85vh;
+        height: 870px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(253, 253, 213);
+        background-color: aqua;
+        
+    
+    }
+
+    #intro-title {
+        text-align: center;
+        margin-top: 8%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 2px;
+        font-size: 2.5em;
+    }
+    
+    #intro-details {
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.3rem;
+        font-size: 1.8em;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        
+    }
+
+    #service-images {
+        display: flex;
+        justify-content: center;
+        justify-content: space-evenly;
+        height: 30%;
+        width: 100%;
+        
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
+    
+        margin-top: 2%;
+        margin-bottom: 0%;
+       
+    }
+
+    #servicePageBreak {
+        position: relative;
+        margin-top: 4.5%;
+
+
+        margin-top: 20%;
+    
+        /* this 20 percent one add to snow as well */
+    
+        width: 90%;
+        height: 0.2%;
+        background-color: black;
+        background-color: rgb(43, 104, 28);
+        /* background-image: url("https://www.publicdomainpictures.net/pictures/410000/nahled/grass-background-clipart.png"); */
+        background-image: url(../images/background_grass.png);
+        
+        background-size: contain;
+        height: 3%;
+    
+    
+    }
+    
+    
+    #littleMower {
+        position: absolute;
+        top: -400%;
+        left: 0%;
+        height: 600%;
+        width: 20%;
+
+        width: 50%;
+        background-color: rgba(0, 0, 0, 0);
+        background-image: url("../images/orange_mower2.png");
+        background-size: cover;
+        
+        animation-duration: 40s;
+        /* animation-duration: 10s; */
+        animation-iteration-count: calc(10);
+        animation-name: mow-lawn;
+    
+    }
+    
+    @keyframes mow-lawn {
+        from {
+            left: 0%;
+        }
+    
+        50% {
+            left: 68%;
+            
+            
+        }
+
+        to {
+            left: 0%;
+            transform: rotateY(180deg)
+        }
+    }
+
+
+    #servicePageBreakSnow {
+        position: relative;
+        margin-top: 20%;
+    }
+    
+    #noSnowShovel {
+        display: none;
+    }
+
+    
+    #snowShovel {        
+        height: 450%;
+        width: 15%;
+        
+    }
+    
+    #snowShovel img {
+        height: 100%;
+        width: 100%;
+    }
+    
+    /* @keyframes shovel {
+        from {
+            top: -800%;
+            
+        }
+    
+        10% {
+            
+            left: 47.8%;
+        }
+    
+        20% {
+            
+            left: 48%;
+        }
+    
+        30% {
+            
+        }
+    
+        40% {
+            left: 47.3;
+            top: -480%;
+            
+        }
+    
+        50% {
+            left: 46.3%;
+        }
+    
+        60% {
+            left: 46.3%;
+        }
+        70% {
+            left: 46.3%;
+        }
+        80% {
+            left: 46.3%;
+        }
+        90% {
+            left: 46.3%;
+        }
+        100% {
+            left: 46.3%;
+            
+        }
+        
+    
+        to {
+            top: -500%;
+            left: 46.3%;
+        }
+    
+    
+    
+    } */
+    
+    #growingTree {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        position: absolute;
+        top: -740%;
+        left: .5%;
+        height: 800%;
+        width: 100%;
+        background-color: rgba(255, 0, 0, 0);
+        background-image: url("../images/growing_tree_4.5.png");
+        background-image: url("../images/growing_tree_1.5.png");
+        background-size: contain;
+        animation-duration: 10s;
+        animation-name: growTree;
+    }
+    
+    
+    
+    #servicePageBreak2 {
+        width: 90%;
+    }
+    
+    #servicePageBreakSnow2 {
+        width: 90%;
+        background-color: rgb(173, 173, 229);
+        background-image: url("../images/background_snow.jpg");
+        background-size: contain;
+    }
+}
+
+@media (min-width: 992px) {
+    #service-intro {
+        height: 75vh;
+        height: 85vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(253, 253, 213);
+            
+    
+    }
 }
 
 @media (min-width: 1200px) {
