--- a/client/src/css/Projects.css
+++ b/client/src/css/Projects.css
@@ -120,7 +120,8 @@
     height: 100%;
     width: 2%;
     width: 10%;
-    background-color: rgba(0, 0, 0, 0.123);
+    /* background-color: rgba(0, 0, 0, 0.123); */
+    background-color: rgb(103, 139, 92);
 }
 
 #right-scroller img {
@@ -135,7 +136,8 @@
     left: -11%;
     height: 100%;
     width: 10%;
-    background-color: rgba(0, 0, 0, 0.123);
+    /* background-color: rgba(0, 0, 0, 0.123); */
+    background-color: rgb(103, 139, 92);
 }
 
 #left-scroller img {
