--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,6 +104,7 @@ body {
   /* height: 160vh; */
   min-height: 160vh;
   background-color: rgb(140, 190, 120);
+  background-color: rgb(103, 139, 92);
   display: block;
   border: 2px solid black;
 }
