--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -116,6 +116,7 @@
 }
 
 #contact-form-container button:hover {
+    cursor: pointer;
     background-color: rgb(50, 200, 50);
 }
 
@@ -264,6 +265,187 @@
     
 }
 
+@media (min-width: 768px) {
+
+    #image-section {
+        height: 880px;
+        width: 100%;
+        background-image: url("../images/simple_life_03.jpg");
+        background-size: none;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: relative;
+        z-index: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 3px solid rgb(0, 0, 0);
+    }
+
+    #contacts-section {
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 1024px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
+        /* background-color: rgb(55, 140, 214); */
+       
+    }
+
+    /* #contact-information {
+
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        margin-top: 15%;
+        height: 50%;
+        width: 35%;
+        padding-right: 0px;
+    }
+
+    #contact-info-header {
+        font-size: 2.5em;
+        letter-spacing: 5px;
+        text-wrap: nowrap;
+    } */
+
+    #contact-information {
+
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+        gap: 0px;
+        margin-top: 15%;
+        height: 40%;
+        width: 35%;
+        width: 100%;
+        padding-right: 0px;
+
+        text-align: center;
+
+    }
+
+    #contact-info-header {
+        font-size: 3em;
+        letter-spacing: 5px;
+    }
+
+    #contact-info-paragraph {
+        font-size: 1.7em;
+        padding-top: 30px;
+        
+    }
+
+    #contact-form-container {
+        
+        width: 75%;
+        height: 100%;
+        background-color: white;
+        box-shadow: 2px 2px 10px 2px rgba(49, 49, 49, 0.2);
+        font-size: 1.5em;
+
+        /* make higher sizes font 1em*/
+    }
+
+    #contact-form-container button {
+        margin-right: auto;
+        margin-left: 0;
+        padding: 15px;
+        width: 25%;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        background-color: rgb(50, 160, 50);
+        transition: .2s;
+        letter-spacing: 2px;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+        font-size: 16px;
+        font-size: 22px;
+    }
+
+    #form-bottom {
+        height: 10%;
+    }
+
+
+}
+
+@media (min-width: 1200px) {
+
+    #image-section {
+        height: 60vh;
+        height: 85vh;
+        height: 780px;
+        width: 100%;
+        background-image: url("../images/simple_life_03.jpg");
+        background-size: none;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: relative;
+        z-index: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 3px solid rgb(0, 0, 0);
+    }
+
+    #contacts-section {
+        /* margin: auto; */
+        margin-top: 10vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        height: 850px;
+        width: 100%;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
+       
+    }
+
+    #contact-information {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 40%;
+        padding-right: 50px;
+
+
+        margin-top: 3%;
+
+    }
+
+    #contact-info-header {
+        font-size: 2.4em;
+        letter-spacing: 5px;
+    }
+
+    #contact-info-paragraph {
+        font-size: 1.4em;
+        padding-top: 30px;
+        padding-left: 10px;
+        padding-right: 10px;
+        
+    }
+
+    #contact-form-container {
+        width: 50%;
+        height: 90%;
+        background-color: white;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.2);
+
+        font-size: 1.2em;
+    }
+}
+
 
 @media (min-width: 1500px) {
     
@@ -285,9 +467,56 @@
     }
 
     #contacts-section {
+        /* margin: auto; */
+        margin-top: 10vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
         height: 850px;
+        width: 100%;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
        
     }
+
+    #contact-information {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 50%;
+        padding-right: 50px;
+
+
+        margin-top: 3%;
+
+    }
+
+    #contact-info-header {
+        font-size: 2.4em;
+        letter-spacing: 5px;
+    }
+
+    #contact-info-paragraph {
+        font-size: 1.4em;
+        padding-top: 30px;
+        padding-left: 10px;
+        padding-right: 10px;
+        
+    }
+
+    #contact-form-container {
+        width: 40%;
+        height: 90%;
+        background-color: white;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.2);
+
+        font-size: 1.2em;
+    }
+
+    
     
 }
 
@@ -315,4 +544,18 @@
        
     }
     
+    #contacts-section {
+        /* margin: auto; */
+        margin-top: 10vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        height: 930px;
+        width: 100%;
+
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
+       
+    }
 }
