--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -1,38 +1,69 @@
 #aboutPage-Title {
-    /* margin-top: 2%; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* height: 200px; */
+    height: 25vh;
+    width: 100%;
     padding: 2%;
     font-size: 25pt;
-    letter-spacing: 2px;
+
+
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 100%;
+    letter-spacing: 4px;
+    color: white;
+
+    
     text-align: center;
     /* background-color: antiquewhite; */
     background-color: rgb(253, 253, 213);
+
+    background-color: rgb(103, 139, 92);
+    border-top: 2px solid rgb(51, 50, 50);
+
+    
 }
 
 #aboutPage-Body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     height: 90vh;
     width: 100%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     letter-spacing: 3px;
-    /* background-color: rgb(47, 155, 155); */
+    /* height: 150vh; */
+    
+    height: fit-content;
 }
+
+
+
 
 #aboutPage-Content1 {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 45%;
+    /* height: 100%; */
+    padding-left: 2%;
+    padding-right: 2%;
+    gap: 2%;
+    /* height: 25%; */
+    height: 333px;
+    width: 100%;
     /* background-color: blue; */
+    
 }
+
 #aboutPage-Img-Container {
-    margin-left: 5%;
-    height: 85%;
-    width: 70%;
+    margin-left: 0%;
+    height: 80%;
+    width: 95%;
+    
 }
+
 
 #aboutPage-Body img {
     height: 100%;
@@ -43,24 +74,60 @@
 #aboutPage-Content2 {
     display: flex;
     flex-direction: column;
-    
-    /* gap: 5%; */
+    align-items: center;
     
     height: 80%;
     width: 50%;
 
-    /* background-color: rgb(233, 140, 140); */
+
+    gap: 5%;
+    height: 60%;
+    
+    width: 100%;
+    margin-bottom: 35%;
 }
+
+#about-Owen {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 93%;
+    letter-spacing: 2px;
+    /* background-color: rgb(168, 168, 214); */
+    border-bottom: 2px solid green;
+}
+
+#about-Owen-Title {
+    font-size: 16pt;
+    
+}
+
+#about-Owen-Title-2 {
+    margin-top: 2%;
+    font-size: 15pt;
+    font-style: italic;
+}
+
+#about-Owen p {
+    font-size: 18px;
+    margin-top: 3%;
+    padding-right: 10%;
+}
+
 
 #about-Work {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5%;
-    height: 50%;
+    /* height: 50%; */
+    height: 384px;
+    width: 93%;
+    background-color: rgb(231, 223, 212);
 }
 
 #aboutWork-Text-1 {
+    padding-top: 10%;
     width: 100%;
     text-align: center;
     font-weight: bold;
@@ -68,19 +135,47 @@
 }
 
 #aboutWork-Text-2 {
+    padding-left: 10%;
+    padding-right: 10%;
     width: 100%;
     text-align: center;
-    font-size: 13pt;
+    font-size: 14.5pt;
 
     letter-spacing: 1.5px;
 }
 
+#aboutPageBanner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7%;
+    height: 500px;
+    width: 100%;
+    background-image: url(../images/simple_life_08.jpg);
+    background-size: cover;
+}
+
+#aboutPageBanner button {
+    margin-top: 15%;
+    height: 70px;
+    width: 200px;
+    background-color: rgb(185, 122, 4);
+    background-color: rgb(241, 104, 22);
+    color: white;
+    font-size: 15pt;
+}
+
 #about-Goal {
+    padding-top: 10%;
     height: 50%;
+    margin-top: 7%;
+    height: 384px;
+    width: 93%;
     display: flex;
     flex-direction: column;
     /* background-color: red; */
-    gap: 5%;
+    /* gap: 5%; */
+    background-color: rgb(231, 223, 212);
 }
 #aboutPage-Text-1 {
     width: 45%;
@@ -139,52 +234,206 @@
     letter-spacing: 1.5px;
 }
 
+@media (min-width: 601px) {
 
-@media (max-width: 600px) {
+}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 992px) {
+
+}
+
+
+@media (min-width: 1200px) {
 
     #aboutPage-Title {
-        /* margin-top: 2%; */
-        height: 20vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
+        height: 200px;
+        width: 100%;
+        padding: 2%;
+        font-size: 25pt;
     
+    
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 4px;
+        color: white;
+    
+        
+        text-align: center;
+        /* background-color: antiquewhite; */
+        background-color: rgb(253, 253, 213);
+    
+        background-color: rgb(103, 139, 92);
+        border-top: 2px solid rgb(51, 50, 50);
+    
+        
     }
-
+    
     #aboutPage-Body {
         display: flex;
-        flex-direction: column;
-        height: 150vh;
+        align-items: center;
+        /* height: 90vh; */
+        height: fit-content;
+        width: 100%;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 3px;
+        /* background-color: rgb(47, 155, 155); */
     }
-
+    
     #aboutPage-Content1 {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
-        height: 40%;
+        height: 100%;
         width: 100%;
         /* background-color: blue; */
+        background-color: rgb(126, 126, 139);
     }
-
+    #aboutPage-Img-Container {
+        margin-top: 2.5%;
+        height: 85%;
+        width: 70%;
+        margin-bottom: 2.5%;
+    }
+    
+    #aboutPage-Body img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+    
     #aboutPage-Content2 {
         display: flex;
         flex-direction: column;
-        
-        gap: 5%;
-        height: 60%;
-        width: 80%;
-    
-        /* background-color: rgb(233, 140, 140); */
-        
-        margin-bottom: 35%;
-    }
-    
-    #aboutPage-Img-Container {
-        margin-left: 0%;
+
+        /* position: relative; */
+        margin-top: 5%;
         height: 80%;
-        width: 95%;
+        width: 100%;
+        position: relative;
+        
+    }
+
+    #about-Owen {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 5%;
+        height: 100%;
+        width: 50%;
+        /* width: 500px; */
+        
     }
     
+    #about-Work {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        left: 50%;
+        gap: 5%;
+        height: 100%;
+        width: 50%;
+        background-color: yellow;
+    }
+    
+    #aboutWork-Text-1 {
+        width: 100%;
+        text-align: center;
+        font-weight: bold;
+        font-size: 22pt;
+    }
+    
+    #aboutWork-Text-2 {
+        width: 100%;
+        text-align: center;
+        font-size: 13pt;
+    
+        letter-spacing: 1.5px;
+    }
+
+    #aboutPageBanner {
+        /* position: absolute;
+        top: 200%; */
+    }
+    
+    #about-Goal {
+        /* position: absolute;
+        top: 100%; */
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        /* background-color: red; */
+        gap: 5%;
+    }
+    #aboutPage-Text-1 {
+        width: 45%;
+        width: 100%;
+        
+        text-align: center;
+        font-weight: bold;
+        /* font-size: 25pt; */
+        font-size: 22pt;
+    
+        letter-spacing: 1.5px;
+    }
+    
+    #aboutPage-Text-2 {
+        text-align: center;
+        width: 45%;
+        width: 100%;
+        /* background-color: aqua; */
+        font-size: 13pt;
+    
+        letter-spacing: 1.5px;
+    
+    }
+    
+    #aboutPage-Text-3 {
+        text-align: center;
+        width: 45%;
+        width: 100%;
+        font-size: 13pt;
+        /* background-color: aqua; */
+    
+        letter-spacing: 1.5px;
+        
+    
+    }
+    
+    #aboutPage-Text-4 {
+        text-align: center;
+        width: 45%;
+        width: 100%;
+        font-size: 13pt;
+        /* background-color: aqua; */
+        
+        letter-spacing: 1.5px;
+    }
+    
+    #aboutPage-Text-5 {
+        text-align: center;
+        width: 45%;
+        width: 100%;
+        font-size: 16pt;
+        font-weight: bold;
+        color: rgb(131, 168, 131);
+        /* background-color: aqua; */
+        
+        letter-spacing: 1.5px;
+    }
+
+
+}
+
+
+@media (min-width: 1500px) {
+
+}
+
+
+@media (min-width: 1800px) {
 
 }
