--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -1571,7 +1571,7 @@
     
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1200px) {
 
     #service-intro {
         height: 75vh;
@@ -2278,6 +2278,7 @@
     #service-intro {
         height: 75vh;
         height: 85vh;
+        height: 630px;
         
         /* height: 832px; */
         width: 100%;
@@ -2294,10 +2295,252 @@
         /* background-color: rgb(233, 214, 152); */
         /* background-color: rgb(224, 183, 94); */
         background-color: rgb(253, 253, 213);
+        background-color: aquamarine;
+    
+    }
+
+    #service-images {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        /* height: 20%;
+        width: 100%;
+
+        padding-top: 0%;
+        padding-left: 0%;
+        padding-right: 0%; */
+
+        /* margin-bottom: 10%;
+        margin-bottom: 40%; */
+
+        
+    }
+
+
+
+    #services-provided {
+        /* height: 300vh;
+        height: 350vh; */
+
+        height: 2690px;
+        /* height: 3400px; */
+        width: 100%;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content:flex-start;
+        gap: 2%;
+        
+    }
+
+
+    .service1-content {
+        
+        
+    }
+
+
+    .service1-img {
+        margin-left: 5%;
+        height: 100%;
+        width: 50%;
+    }
+    
+    .service1-img img {
+        height: 100%;
+        width: 100%;
+        
+    }
+
+    #service-space-4 {
+        
+    }
+
+    
+
+}
+
+
+@media (min-width: 1800px) {
+
+    #service-intro {
+        height: 75vh;
+        height: 85vh;
+        height: 845px;
+        /* height: 1116.05px; */
+        
+        /* height: 832px; */
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    
+        /* if would like to use services images remove the justify center below*/
+    
+        /* justify-content: center; */
+        align-items: center;
+    
+    
+        /* background-color: rgb(216, 255, 215); */
+        /* background-color: rgb(233, 214, 152); */
+        /* background-color: rgb(224, 183, 94); */
+        background-color: rgb(253, 253, 213);
+        background-color: orange;
         
     
     }
+
+    #service-images {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        /* height: 20%;
+        width: 100%;
+
+        padding-top: 0%;
+        padding-left: 0%;
+        padding-right: 0%; */
+
+        /* margin-bottom: 10%;
+        margin-bottom: 40%; */
+
+        
+    }
+
+
+
+    #services-provided {
+        /* height: 300vh;
+        height: 350vh; */
+
+        /* height: 2590px; */
+        height: 3400px;
+        width: 100%;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content:flex-start;
+        gap: 2%;
+        
+    }
+
+
+    .service1-content {
+        
+        
+    }
+
+
+    .service1-img {
+        margin-left: 5%;
+        height: 100%;
+        width: 50%;
+    }
     
+    .service1-img img {
+        height: 100%;
+        width: 100%;
+        
+    }
+
+    #service-space-4 {
+        
+    }
+
+    #fence-container {
+        top: -230%;
+    }
+
+    #fence-container-rightside {
+        top: -230%;
+    }
+
+
+    #growingTree {
+        position: absolute;
+        top: -1350%;
+        top: -1320%;
+        left: 41.5%;
+        height: 1500%;
+        width: 17%;
+        background-color: rgba(255, 0, 0, 0);
+        background-image: url("../images/growing_tree_4.5.png");
+        background-image: url("../images/growing_tree_1.5.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    
+        animation-duration: 10s;
+        /* animation-iteration-count: calc(10); */
+        animation-name: growTree;
+    }
+    
+    @keyframes growTree {
+        /* from {
+            background-image: url("../images/growing_tree_1.5.png");
+            background-size: cover;
+        }
+    
+        50% {
+            background-image: url("../images/growing_tree_2.5.png");
+            background-size: cover;
+        }
+    
+        to {
+            background-image: url("../images/growing_tree_4.5.png");
+            background-size: cover;
+        } */
+    
+        10% {
+            background-image: url("../images/growing_tree_1.5.png");
+    
+        }
+    
+        20% {
+            background-image: url("../images/growing_tree_1.5.png");
+        }
+    
+        25% {
+            background-image: url("../images/growing_tree_1.5.png");
+        }
+    
+        30% {
+            background-image: url("../images/growing_tree_2.5.png")
+        }
+    
+        50% {
+            background-image: url("../images/growing_tree_2.5.png")
+        }
+    
+        60% {
+            background-image: url("../images/growing_tree_3.5.png")
+        }
+    
+        75% {
+            background-image: url("../images/growing_tree_3.5.png")
+        }
+    
+        80% {
+            background-image: url("../images/growing_tree_3.5.png")
+        }
+    
+        85% {
+            background-image: url("../images/growing_tree_4.5.png");
+            
+        }
+    
+        90% {
+            background-image: url("../images/growing_tree_4.5.png");
+            
+        }
+    
+        100% {
+            background-image: url("../images/growing_tree_4.5.png");
+            
+        }
+    }
+
     
 
 }
