--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -87,6 +87,16 @@
     margin-bottom: 35%;
 }
 
+#aboutPage-top-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 694px;
+    gap: 20px;
+    width: 93%;
+}
+
 #about-Owen {
     display: flex;
     flex-direction: column;
@@ -94,7 +104,7 @@
     width: 93%;
     letter-spacing: 2px;
     /* background-color: rgb(168, 168, 214); */
-    border-bottom: 2px solid green;
+    /* border-bottom: 2px solid green; */
 }
 
 #about-Owen-Title {
@@ -306,23 +316,37 @@
     
     #aboutPage-Content2 {
         display: flex;
+        justify-content: center;
         flex-direction: column;
 
-        /* position: relative; */
+        position: relative;
         margin-top: 5%;
         height: 80%;
+        height: fit-content;
         width: 100%;
-        position: relative;
         
+        
+    }
+
+    #aboutPage-top-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        height: 400px;
+        gap: 20px;
+        width: 93%;
     }
 
     #about-Owen {
         display: flex;
         flex-direction: column;
-        position: absolute;
-        left: 5%;
+       
         height: 100%;
         width: 50%;
+
+        height: 350px;
+        background-color: yellow;
         /* width: 500px; */
         
     }
@@ -331,11 +355,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        position: absolute;
-        left: 50%;
+        
         gap: 5%;
         height: 100%;
         width: 50%;
+
+        height: 350px;
         background-color: yellow;
     }
     
@@ -355,18 +380,19 @@
     }
 
     #aboutPageBanner {
-        /* position: absolute;
-        top: 200%; */
+        
+       
     }
     
     #about-Goal {
-        /* position: absolute;
-        top: 100%; */
         height: 50%;
+
         display: flex;
         flex-direction: column;
         /* background-color: red; */
         gap: 5%;
+
+        height: 400px;
     }
     #aboutPage-Text-1 {
         width: 45%;
