--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -132,7 +132,7 @@
     gap: 5%;
     /* height: 50%; */
     height: 384px;
-    width: 93%;
+    width: 98%;
     background-color: rgb(231, 223, 212);
 }
 
@@ -173,6 +173,11 @@
     background-color: rgb(241, 104, 22);
     color: white;
     font-size: 15pt;
+}
+
+#aboutPageBanner button:hover {
+    cursor: pointer;
+    background-color: rgb(245, 141, 81);
 }
 
 #about-Goal {
@@ -244,12 +249,48 @@
     letter-spacing: 1.5px;
 }
 
-@media (min-width: 601px) {
+@media (max-width: 450px) {
+    #aboutPage-top-row {
+       
+        gap: 30px;
+        
+    } 
 
+    #aboutPage-Content1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        height: 130px;
+        width: 100%;
+        
+        
+    }
+    
+}
+
+@media (min-width: 600px) {
+
+    #aboutPage-Content1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        height: 333px;
+        width: 100%;
+        
+        
+    }
+
+    
 }
 
 @media (min-width: 768px) {
-
+    #aboutPage-top-row {
+       
+        gap: 20px;
+        
+    } 
 }
 
 @media (min-width: 992px) {
@@ -273,7 +314,6 @@
         
         text-align: center;
         /* background-color: antiquewhite; */
-        background-color: rgb(253, 253, 213);
     
         background-color: rgb(103, 139, 92);
         border-top: 2px solid rgb(51, 50, 50);
@@ -286,6 +326,7 @@
         align-items: center;
         /* height: 90vh; */
         height: fit-content;
+        height: 2000px;
         width: 100%;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         letter-spacing: 3px;
@@ -341,14 +382,31 @@
     #about-Owen {
         display: flex;
         flex-direction: column;
+        text-align: center;
+        align-items: center;
        
         height: 100%;
         width: 50%;
 
         height: 350px;
-        background-color: yellow;
+        background-color: rgb(231, 223, 212);
+        
         /* width: 500px; */
         
+    }
+
+    #about-Owen-Title {
+        padding-top: 10%;
+        font-weight: bold;
+        font-size: 22pt;
+    }
+
+    #about-Owen p {
+        text-align: center;
+        font-size: 18px;
+        margin-top: 3%;
+        padding-left: 10%;
+        padding-right: 10%;
     }
     
     #about-Work {
@@ -361,7 +419,8 @@
         width: 50%;
 
         height: 350px;
-        background-color: yellow;
+        background-color: rgb(231, 223, 212);
+        
     }
     
     #aboutWork-Text-1 {
@@ -380,8 +439,21 @@
     }
 
     #aboutPageBanner {
-        
-       
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    #aboutPageBanner button {
+        margin-top: 0%;
+        margin-right: 5%;
+        height: 70px;
+        width: 250px;
+        background-color: rgb(185, 122, 4);
+        background-color: rgb(241, 104, 22);
+        color: white;
+        font-size: 15pt;
     }
     
     #about-Goal {
@@ -391,10 +463,12 @@
         flex-direction: column;
         /* background-color: red; */
         gap: 5%;
-
+        padding-left: 10%;
+        padding-right: 10%;
         height: 400px;
     }
     #aboutPage-Text-1 {
+
         width: 45%;
         width: 100%;
         
@@ -407,21 +481,23 @@
     }
     
     #aboutPage-Text-2 {
+        margin-top: 3%;
         text-align: center;
         width: 45%;
         width: 100%;
         /* background-color: aqua; */
-        font-size: 13pt;
+        font-size: 15pt;
     
         letter-spacing: 1.5px;
     
     }
     
     #aboutPage-Text-3 {
+        margin-top: 2%;
         text-align: center;
         width: 45%;
         width: 100%;
-        font-size: 13pt;
+        font-size: 15pt;
         /* background-color: aqua; */
     
         letter-spacing: 1.5px;
@@ -430,16 +506,18 @@
     }
     
     #aboutPage-Text-4 {
+        margin-top: 2%;
         text-align: center;
         width: 45%;
         width: 100%;
-        font-size: 13pt;
+        font-size: 15pt;
         /* background-color: aqua; */
         
         letter-spacing: 1.5px;
     }
     
     #aboutPage-Text-5 {
+        
         text-align: center;
         width: 45%;
         width: 100%;
@@ -456,10 +534,170 @@
 
 
 @media (min-width: 1500px) {
+    #aboutPage-Title {
+        height: 200px;
+        width: 100%;
+        padding: 2%;
+        font-size: 25pt;   
+    }
 
+    #aboutPage-Body {
+        display: flex;
+        align-items: center;
+        /* height: 90vh; */
+        height: fit-content;
+        /* height: 2000px; */
+        height: 2500px;
+        width: 100%;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 3px;
+        /* background-color: rgb(47, 155, 155); */
+    }
+    
+    #aboutPage-Content1 {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: 100%;
+        
+        width: 100%;
+        /* background-color: blue; */
+        background-color: rgb(126, 126, 139);
+        
+    }
+
+    #aboutPage-Img-Container {
+        margin-top: 2.5%;
+        height: 85%;
+        width: 70%;
+        margin-bottom: 2.5%;
+    }
+    
+    #aboutPage-Body img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    #aboutPage-top-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        height: 460px;
+        gap: 20px;
+        width: 93%;
+        
+    }
+
+    #about-Owen {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+       
+        height: 100%;
+        width: 50%;
+
+        /* height: 350px; */        
+        /* width: 500px; */
+        
+    }
+
+    #about-Work {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        gap: 5%;
+        height: 100%;
+        width: 50%;
+        
+
+    }
+
+    #aboutPageBanner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 800px;
+        margin-top: 3%;
+
+    }
+
+    #about-Goal {
+        height: 50%;
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        /* background-color: red; */
+        gap: 5%;
+        padding-top: 3%;
+        padding-left: 10%;
+        padding-right: 10%;
+        height: 520px;
+    }
 }
 
 
 @media (min-width: 1800px) {
+    #aboutPage-Title {
+        height: 220px;
+        width: 100%;
+        padding: 2%;
+        font-size: 25pt;   
+    }
 
+    #aboutPage-Body {
+        display: flex;
+        align-items: center;
+        /* height: 90vh; */
+        height: 100%;
+        width: 100%;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 3px;
+        
+        /* background-color: rgb(47, 155, 155); */
+    }
+    
+    #aboutPage-Content1 {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: 100%;
+        
+        width: 100%;
+        /* background-color: blue; */
+        background-color: rgb(126, 126, 139);
+        
+        
+    }
+
+    #aboutPage-Img-Container {
+        margin-top: 2.5%;
+        height: 85%;
+        width: 70%;
+        margin-bottom: 2.5%;
+    }
+    
+    #aboutPage-Body img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    #about-Goal {
+        height: 50%;
+        margin-top: 3%;
+        display: flex;
+        flex-direction: column;
+        /* background-color: red; */
+        gap: 5%;
+        padding-top: 3%;
+        padding-left: 10%;
+        padding-right: 10%;
+        height: 620px;
+        
+        width: 80%;
+    }
 }
