--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -205,6 +205,33 @@
 }
 
 
+@media (min-width: 782px) {
+
+    .logo-container {
+        justify-content: flex-start;
+        align-items: center;
+        position: relative;
+        margin-left: 2%;
+        height: 100%;
+        width: 40%;
+        display: flex;
+        
+        gap: 3%;
+        padding-bottom: 0%;
+    
+        font-size: 1.5rem;
+        font-family: "Pacifico", cursive;
+        letter-spacing: 4px;
+        
+        
+        color: #fff;
+        color: black;
+        
+        
+    }
+}
+
+
 
 @media (min-width: 1200px) {
     
@@ -239,6 +266,7 @@
     margin-left: 2%;
     height: 100%;
     width: 40%;
+    width: 60%;
     display: flex;
     
     gap: 3%;
@@ -252,9 +280,11 @@
     color: #fff;
     color: black;
     
+    
 }
 
 #main-logo {
+    
     height: 100%;
     width: 25%;
     width: 14%;
@@ -272,6 +302,7 @@
 #company-title {
     display: flex;
     align-items: center;
+    
     font-size: 1em;
     letter-spacing: 4px;
 
@@ -325,4 +356,59 @@
     height: 10vh;
     background-color: rgb(0, 0, 0);
 }
+}
+
+@media (min-width: 1500px) {
+
+    .logo-container {
+        justify-content: flex-start;
+        align-items: center;
+        position: relative;
+        margin-left: 2%;
+        height: 100%;
+        width: 40%;
+        
+        display: flex;
+        
+        gap: 3%;
+        padding-bottom: 0%;
+    
+        font-size: 1.5rem;
+        font-family: "Pacifico", cursive;
+        letter-spacing: 4px;
+        /* font-weight: bold; */
+        
+        color: #fff;
+        color: black;
+        
+        
+    }
+}
+
+
+@media (min-width: 1800px) {
+
+    .logo-container {
+        justify-content: flex-start;
+        align-items: center;
+        position: relative;
+        margin-left: 2%;
+        height: 100%;
+        width: 30%;
+        
+        display: flex;
+        
+        gap: 3%;
+        padding-bottom: 0%;
+    
+        font-size: 1.5rem;
+        font-family: "Pacifico", cursive;
+        letter-spacing: 4px;
+        /* font-weight: bold; */
+        
+        color: #fff;
+        color: black;
+        
+        
+    }
 }
